--- a/tomas/project2tour/md_bio-x/md_bio-x.html
+++ b/tomas/project2tour/md_bio-x/md_bio-x.html
@@ -7,7 +7,7 @@
 		<title>Mark Dion</title>
 		<meta name="description" content="">
 		<meta name="viewport" contents="width-device-width">
-		<link rel="stylesheet" type="text/css" href="markdionbio.css">
+		<link rel="stylesheet" type="text/css" href="md_bio-x.css">
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Playfair+Display">
   </head>
