--- a/tomas/project2tour/3md_bio.html
+++ b/tomas/project2tour/3md_bio.html
@@ -12,7 +12,12 @@
   
 <div class="bg"></div>
 
-<div class="bio"><p>Mark Dion is a sculptor and installation artist. His practice incorporates aspects of archeology, ecology and museuology and his projects focus primarily on current issues surrounding the representation of nature and on the history of the natural sciences. </p></div>
+<div class="bio"><p>Mark Dion</p> 
+	<p> His sculpture and installations.</p>
+	<p>-archeology</p>
+	<p>-ecology</p> 
+	<p>-and museuology</p>
+	<p>His projects focusing primarily on current issues of the representation of nature and on the history of the natural sciences. </p></div>
 
 </body>
 
